...
}

@Observable
@MainActor
public final class HomeSettingsViewModel: GroupedListDataSource {
    public var title: String {
        "Home settings"
    }

    public private(set) var footerCaption: String?

    public private(set) var state: GroupedListState = .loading
    public var refreshFailureMessage: String?
...
